[package]
name = "transgui-ng"
version = "0.1.0"
description = "Transmission Remote GUI - next gen client for transmission torrent daemon"
authors = ["qu1ck"]
license = "GNU-AGPL-3.0"
repository = ""
default-run = "transgui-ng"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.2", features = [] }


[dependencies]
serde_json = "^1.0"
base64 = "^0.21"
lava_torrent = "^0.10"
urlencoding = "^2.1"
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1.17", features = ["net"] }
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "^1.2", features = ["cli", "devtools", "dialog-all", "fs-read-file", "fs-write-file", "http-all", "path-all", "shell-open", "system-tray", "window-close", "window-set-position", "window-set-size", "window-set-title", "notification"] }
opener = "0.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
