[package]
name = "trguing"
version = "0.1.0"
description = "Remote control GUI for Transmission torrent daemon"
authors = ["qu1ck"]
license = "GNU-AGPL-3.0"
repository = "https://github.com/openscopeproject/trguing/"
default-run = "trguing"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.2", features = [] }


[dependencies]
serde_json = "^1.0"
base64 = "^0.21"
lava_torrent = "^0.11.1"
urlencoding = "^2.1"
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1.28", features = ["net"] }
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "^1.4", features = ["cli", "devtools", "dialog-all", "fs-read-file", "fs-write-file", "notification", "path-all", "shell-open", "system-tray", "window-center", "window-close", "window-create", "window-hide", "window-set-focus", "window-set-position", "window-set-size", "window-set-title", "window-show", "window-unminimize"] }
tauri-utils = "^1.4"
opener = "0.6"
rodio = { version = "0.17.1", features = ["mp3"], default-features = false }
hyper-tls = "0.5.0"
notify-rust = "4.8.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
