[package]
name = "trguing"
version = "1.5.1"
description = "Remote control GUI for Transmission torrent daemon"
authors = ["qu1ck"]
license = "GNU-AGPL-3.0"
repository = "https://github.com/openscopeproject/trguing/"
default-run = "trguing"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
serde_json = "^1.0"
base64 = "^0.22"
lava_torrent = { git = "https://github.com/openscopeproject/lava_torrent", branch = "patches" }
# lava_torrent = { path = "../../lava_torrent" }
urlencoding = "^2.1"
hyper = { version = "1", features = ["full"] }
http-body-util = "*"
hyper-util = { version = "^0.1", features = ["server-auto", "server-graceful"] }
tokio = { version = "^1.28", features = ["net", "macros"] }
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "2.9.1", features = [ "devtools", "tray-icon"] }
tauri-utils = "2.8.0"
opener = { version = "0.7", features = ["reveal"], default-features = false }
rodio = { version = "^0.20", features = ["mp3"], default-features = false }
maxminddb = "^0.26"
font-loader = "0.11.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
dirs = "6.0.0"

[dependencies.reqwest]
version = "*"
features = ["native-tls", "socks", "gzip", "deflate"]

[target.'cfg(windows)'.dependencies]
winreg = "^0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "^0.6"
once_cell = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
